<resources>
    <string name="app_name">SUBian</string>
    <string name="verify_8801717248136">Verify +8801717248136</string>
    <string name="enter_the_otp">Enter the OTP code to verify your phone number.</string>
    <string name="chats">Chats</string>
    <string name="audio_call">Audio Call</string>
    <string name="profile">Profile</string>
    <string name="block">Block</string>
    <string name="settings">Settings</string>
    <string name="video_call">Video Call</string>
    <string name="report">Report</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="confirm">Confirm</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="get_otp">Get OTP</string>
    <string name="continuetxt">Continue</string>
    <string name="full_profile_info">Please enter your full name, and upload your profile picture.</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="verify_next">You will received 6 digit code to verify next, and must include +880.</string>
    <string name="full_name">Full Name</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="delete_everyone">Delete for Everyone</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="type_a_message">Type a message…</string>
    <string name="hello_subians">Hello, SUBians!</string>


    <!--WTSlider Splash Screen Items-->
    <string name="wtslidea">Community</string>
    <string name="wtslidea_desc">You can create a community or, be part of many!</string>
    <string name="wtslideb">Meet &amp; Make Friends</string>
    <string name="wtslideb_desc">You want to make friends &amp; meet with her/his, friend is what the heart needs all the time!</string>
    <string name="wtslidec">Study Materials</string>
    <string name="wtslidec_desc">Easily you find your study materials, and download and share others!</string>
    <string name="wtslided">Winner Award</string>
    <string name="wtslided_desc">It\'s award for the top blood donor of the year, top blood donors receive this award from SaveLIFE app!</string>
    <string name="Next">NEXT</string>
    <string name="Skip">SKIP</string>
    <string name="Start">GOT IT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_download">My Download</string>
    <string name="push_notification">Push Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="Privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate</string>
    <string name="share_app">Share</string>
    <string name="locally_cached_data">Clear cache data</string>
    <string name="enable_theme">Enable Day/Night Mode</string>
    <string name="post_title">Add Post</string>
    <string name="write_your_text">Write your text here…</string>
    <string name="add_msg_pic">Tags:</string>
    <string name="add_msg_pics">Tap to add picture</string>
    <string name="tags">Tags:</string>
    <string name="txt_close">Close</string>
    <string name="post_now">Post</string>
    <string name="posted_0_seconds_ago">Posted 0 second ago</string>
    <string name="like">Like</string>
    <string name="caption">Caption</string>
    <string name="comment">Comments</string>
    <string name="share">Share</string>
    <string name="no_text">+880</string>
    <string name="home">Home</string>
    <string name="study">Study</string>

    <string name="texttwo">We are glad to invite you to our first Codeforces Round Codeforces Round #738 (Div. 2) which will be held on Sunday, August 15, 2021 at 20:35UTC+6. This round will be rated for participants with rating less than 2100. We will be glad to see participants from the first division to join out of competition as well!

In this round, as the best friend of Mochaiculty of problem D2 and E.

UPD3: Editorial is available now.

UPD4: Thank you for your participation in this round! Congratulations to the winners!

Div. 2

    Suckmycode
    Wlxsohandsome
    idontwannawin
    shu_ya_zi
    _Kubic_
Div. 1 + Div. 2

    neal
    ksun48
    Geothermal
    sjc061031
    Kirill22Div. 1 + Div. 2

    neal
    ksun48
    Geothermal
    sjc061031
    Kirill22Div. 1 + Div. 2

    neal
    ksun48
    Geothermal
    sjc061031
    Kirill22
Div. 1 + Div. 2

    neal
    ksun48
    Geothermal
    sjc061031
    Kirill22
</string>
    <string name="groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="loading">Developer</string>
    <string name="video">Video</string>
    <string name="image">Gallery</string>
    <string name="text">Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="version_1_0_1">Version 1.0.1</string>
    <string name="user_name">User Name</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="friends_go">Friends Go</string>
    <string name="news">News</string>
    <string name="meetup_for_subians"><![CDATA[Meetup, Sports & Fest]]></string>
    <string name="time_00_00_pm">Time 12:00 pm</string>
    <string name="more">More</string>
</resources>