<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_wtslider"
    android:layout_gravity="center"
    tools:context=".Activities.PhoneNumberActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:foregroundGravity="top"
        app:lottie_autoPlay="true"
        app:lottie_fileName="ic_mobile.json"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/phoneLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/otp_verify"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/verify_next"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneLbl"
        app:layout_constraintStart_toStartOf="@+id/phoneLbl"
        app:layout_constraintTop_toBottomOf="@+id/phoneLbl" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/phoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textbox_outline"
                android:ems="11"
                android:hint="@string/enter_phone_no"
                android:padding="10dp"
                tools:ignore="Autofill,TextFields"/>

            <Button
                android:id="@+id/continueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_primary_btn"
                android:text="@string/get_otp" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>