<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        tools:context=".fragments.PostTypeFragment">

        <View
            android:id="@+id/frag_add_text_pic_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_alignParentBottom="true"
            android:alpha="0.95"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/frag_add_text_pic_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_text"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frag_add_text_pic_pic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_gallery"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/image"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frag_add_text_pic_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_video_gallery"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/video"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>